Polish user-facing wiki documentation